--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 75%;
+    max-width: 75%;
     margin: auto;
 }
 
