--- a/game.css
+++ b/game.css
@@ -8,21 +8,17 @@ header nav ul{
 }
 
 body{
+    width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    text-align: center;
+    justify-content: flex-start;
     margin: auto;
 }
 
-body p{
-    width: 50%;
-    margin: auto;
-}
-
-body button{
+button{
     width: auto;
-    margin: auto;
+    align-self: flex-start;
+    justify-self: flex-start;
     background-color: purple;
     color: white;
 }
