--- a/game.css
+++ b/game.css
@@ -7,11 +7,11 @@ header nav ul{
     margin: auto;
 }
 
-body{
-    width: 50%;
+section{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 50%;
     margin: auto;
 }
 
